Closed Bug 637014 Opened 14 years ago Closed 12 years ago

"Assertion failure: compartment mismatched" with makeFinalizeObserver

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla16
Tracking Status
blocking2.0 --- -

People

(Reporter: jandem, Assigned: gal)

References

Details

(Keywords: assertion, regression, testcase)

Attachments

(2 files)

-- var o = newGlobal('new-compartment'); o.makeFinalizeObserver(); -- This seems to be shell-only, but it would be nice to fix this for fuzzers.
Attached file Stack trace
autoBisect shows this is probably related to the following changeset: The first bad revision is: changeset: 62765:6e2ee1f3f6c6 user: Brendan Eich date: Wed Feb 23 19:38:27 2011 -0800 summary: Followup fixes and tests in wake of global |this| binding change (636364, r=luke/gal/dvander, thanks to Waldo for the newGlobal shell function). Hope for .x
Blocks: 636364
blocking2.0: --- → ?
Keywords: regression
Version: unspecified → Trunk
Shell only, NPOTB, can't block by definition, but definitely something we should fix right away.
blocking2.0: ? → -
Assignee: general → brendan
Attached patch patchSplinter Review
Ah JS_GetGlobalObject, we love you so much.
Assignee: brendan → gal
Attachment #515374 - Flags: review?(lw)
Gary, you can push this patch after luke reviewed it.
Comment on attachment 515374 [details] [diff] [review] patch can haz JS_GetGlobalForScopeChain instead?
Attachment #515374 - Flags: review?(lw) → review+
Blocks: 731549
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
A testcase for this bug was automatically identified at js/src/jit-test/tests/basic/testBug637014.js.
Flags: in-testsuite+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: