Bug 637014 - use the right global in MakeFinalizeObserver (r=luke)